--- a/AdvancedCSS/style.css
+++ b/AdvancedCSS/style.css
@@ -10,6 +10,57 @@ body {
     margin: 0;
 }
 
+label {
+    font-size: 35px;
+    font-weight: 600;
+}
+
+p {
+    font-size: 24px;
+    line-height:1.2;
+}
+
+article p {
+    font-size: 35px;
+    padding: 10px;
+}
+
+.container {
+    width: 100%;
+    margin: auto;
+    padding-top: 4%;
+    padding-bottom: 4%;
+}
+
+.row {
+    width:100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.row::after {
+    display: table;
+    clear: both;
+    content: "";
+}
+
+.col-1 {width: 8.33%}
+.col-2 {width: 16.66%}
+.col-3 {width: 25%}
+.col-4 {width: 33.33%}
+.col-5 {width: 41.66%}
+.col-6 {width: 50%}
+.col-7 {width: 58.33%}
+.col-8 {width: 66.66%}
+.col-9 {width: 75%}
+.col-10 {width: 83.33%}
+.col-11 {width: 91.66%}
+.col-12 {width: 100%}
+
+* {
+    box-sizing:border-box;
+}
 
 /*###### Nav Bar #########*/
 nav {
@@ -52,6 +103,107 @@ ul.topnav li.dropdown-icon {
     display:none;
 }
 
+/*######## Custom Styles ###########*/
+
+#section-1-gradient {
+    background: #076DFF;  /* for browser that does not support gradients */
+    background: -webkit-linear-gradient(#076DFF,#65a5ff); /* for safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#076DFF,#65a5ff); /* for Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#076DFF,#65a5ff); /* for Firefox 1.6 to 15 */
+    background: linear-gradient(#076DFF,#65a5ff); /*standard syntax */     
+}
+
+div.box {
+    text-align: center;
+    margin: 24px;
+    padding:36px 24px 40px 24px;
+    border-radius: 7px;
+    background-color: #fff;
+    box-shadow: 0 0 0 1px rgba(0,0,0,.15),
+    0 2px 3px 0 rgba(0,0,0,.1); 
+}
+
+div.slopicon img {
+    height: 250px;
+    width: 250px;
+    display: block;
+    margin: auto;
+    box-shadow: -2px/*Horizontal*/ -2px/*Vertical*/ 5px/*Blur amount*/ 2px/*Spread amount*/ rgba(0/*Shadow*/,0/*Backgroundcolor*/,0/*boxcolor*/,.15/*Oppacity*/), 2px 2px 4px 2px rgba(0,0,0,.1);
+}
+
+button {
+    font-size: 32px;
+    font-weight: 700;
+    color:#fff;
+    background-color: #0069ff;
+    padding: 15px 60px;
+    display: block;
+    text-align: center;
+    margin: 5px;
+    border-radius: 7px;
+}
+
+button.LearnMore {
+    display: block;
+    margin: auto;
+}
+
+div.icon {
+    width: 100%;
+}
+
+.leftside-col {
+    margin-left: 30%;
+}
+.rightside-col {
+    margin-left: 10%;
+}
+
+h1.large {
+    color: #fff;
+    font-size: 56px;
+    margin: 0;
+    line-height: 70px;
+}
+
+h1.Section-2-Header {
+    font-size: 65px;
+    text-align: center;
+}
+
+form h2 {
+    color:#fff;
+}
+
+input[type="text"]{
+    font-size: 20px;
+    width: 400px;
+    min-width: 200px;
+    padding: 5px;
+    border-radius: 7px;
+}
+
+footer.footsy {
+    background-color: #666;
+    padding-left: 10%;
+}
+
+footer.footsy h1 {
+    color: #fff;
+    font-size: 35px;
+}
+
+footer.footsy ul {
+    list-style: none;
+    text-align: left;
+    padding-left: 0;
+}
+
+footer.footsy ul li {
+    color: #fff;
+    font-size: 22px;
+    line-height: 1.5;
+}
 
 /*########  Mobile ########3*/
 @media screen and (max-width: 680px) {
@@ -83,6 +235,51 @@ ul.topnav li.dropdown-icon {
         text-align: left;
     }
     
+    h1.Section-2-Header {
+        font-size: 50px;
+    }
+    
+    article p {
+        font-size: 25px;
+    }
+    
+    .col-6, .col-4,.col-7,.col-5{
+        width:100%;
+        margin:0;    
+    }
+    
+    div.moblestack {
+        width: 50%;
+        display: block;
+    }
+    
+    div.box {
+        padding: 5px;
+        display: block;
+    }
+    
+    div.slopicon {
+        margin: 10px;
+    }
+    
+    div.slopicon img {
+        width:100%;
+        height: 100%;
+    }
+    
+    
+    div.leftside-col,div.rightside-col {
+    margin: 15px;
+    }
+    input[type="text"] {
+        width: 250px;
+    }
+    .videoContainer iframe {
+        position: relative;
+        width: 100%;
+        margin: 0;
+        overflow: hidden;
+    }
 }
 
 
